--- a/DigitalOcean.API/DigitalOcean.API-invidious9000.csproj
+++ b/DigitalOcean.API/DigitalOcean.API-invidious9000.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DigitalOcean.API</RootNamespace>
-    <AssemblyName>DigitalOcean.API</AssemblyName>
+    <AssemblyName>DigitalOcean.API-invidious9000</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
