--- a/DigitalOcean.API/DOcean.API.csproj
+++ b/DigitalOcean.API/DOcean.API.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DigitalOcean.API</RootNamespace>
-    <AssemblyName>DigitalOcean.API-invidious9000</AssemblyName>
+    <AssemblyName>DOcean.API</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -53,11 +53,13 @@
     <Compile Include="Clients\DomainsClient.cs" />
     <Compile Include="Clients\DropletActionsClient.cs" />
     <Compile Include="Clients\DropletsClient.cs" />
+    <Compile Include="Clients\FloatingIpActionsClient.cs" />
     <Compile Include="Clients\FloatingIpsClient.cs" />
     <Compile Include="Clients\IDomainRecordsClient.cs" />
     <Compile Include="Clients\IDomainsClient.cs" />
     <Compile Include="Clients\IDropletActionsClient.cs" />
     <Compile Include="Clients\IDropletsClient.cs" />
+    <Compile Include="Clients\IFloatingIpActionsClient.cs" />
     <Compile Include="Clients\IFloatingIpsClient.cs" />
     <Compile Include="Clients\IImageActionsClient.cs" />
     <Compile Include="Clients\IImagesClient.cs" />
@@ -96,6 +98,7 @@
     <Compile Include="Models\Responses\DomainRecord.cs" />
     <Compile Include="Models\Responses\Droplet.cs" />
     <Compile Include="Models\Responses\FloatingIp.cs" />
+    <Compile Include="Models\Responses\FloatingIpAction.cs" />
     <Compile Include="Models\Responses\Image.cs" />
     <Compile Include="Models\Responses\Kernel.cs" />
     <Compile Include="Models\Responses\Key.cs" />
