--- a/DigitalOcean.API.Tests/DOcean.API.Tests.csproj
+++ b/DigitalOcean.API.Tests/DOcean.API.Tests.csproj
@@ -39,7 +39,7 @@
     <Reference Include="NSubstitute">
       <HintPath>..\packages\NSubstitute.1.7.2.0\lib\NET45\NSubstitute.dll</HintPath>
     </Reference>
-    <Reference Include="RestSharp">
+    <Reference Include="RestSharp, Version=104.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharp.104.4.0\lib\net4\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -69,6 +69,8 @@
     <Compile Include="Clients\KeysClientTest.cs" />
     <Compile Include="Clients\RegionsClientTest.cs" />
     <Compile Include="Clients\SizesClientTest.cs" />
+    <Compile Include="Clients\TagsClientTest.cs" />
+    <Compile Include="DropletUtilsTests.cs" />
     <Compile Include="Factory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Clients\ActionsClientTest.cs" />
