--- a/DigitalOcean.API/DOcean.API.csproj
+++ b/DigitalOcean.API/DOcean.API.csproj
@@ -52,6 +52,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clients\ISnapshotsClient.cs" />
+    <Compile Include="Clients\IVolumesClient.cs" />
     <Compile Include="Clients\RestSharp\ActionsClient.cs" />
     <Compile Include="Clients\RestSharp\DomainRecordsClient.cs" />
     <Compile Include="Clients\RestSharp\DomainsClient.cs" />
@@ -76,7 +78,9 @@
     <Compile Include="Clients\RestSharp\KeysClient.cs" />
     <Compile Include="Clients\RestSharp\RegionsClient.cs" />
     <Compile Include="Clients\RestSharp\SizesClient.cs" />
+    <Compile Include="Clients\RestSharp\SnapshotsClient.cs" />
     <Compile Include="Clients\RestSharp\TagsClient.cs" />
+    <Compile Include="Clients\RestSharp\VolumesClient.cs" />
     <Compile Include="Helpers\DropletUtils.cs" />
     <Compile Include="Http\Connection.cs" />
     <Compile Include="Clients\IActionsClient.cs" />
@@ -98,6 +102,7 @@
     <Compile Include="Models\Requests\Key.cs" />
     <Compile Include="Models\Requests\Tag.cs" />
     <Compile Include="Models\Requests\TagResource.cs" />
+    <Compile Include="Models\Requests\Volume.cs" />
     <Compile Include="Models\Responses\Action.cs" />
     <Compile Include="Models\Responses\Domain.cs" />
     <Compile Include="Models\Responses\DomainRecord.cs" />
@@ -111,7 +116,9 @@
     <Compile Include="Models\Responses\Pagination.cs" />
     <Compile Include="Models\Responses\Region.cs" />
     <Compile Include="Models\Responses\Size.cs" />
+    <Compile Include="Models\Responses\Snapshot.cs" />
     <Compile Include="Models\Responses\Tag.cs" />
+    <Compile Include="Models\Responses\Volume.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Responses\DropletUpgrade.cs" />
   </ItemGroup>
